<resources>
    <string name="app_name">TipCalculator</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How Was The Service?</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="okay_15">Okay(15%)</string>
    <string name="calculate">calculate</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>