<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/mainScreenPadding"
        tools:context=".MainActivity">
    <EditText
            android:id="@+id/costEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cost_of_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/howsServiceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_was_the_service"
            app:layout_constraintHorizontal_bias="0.0"
            android:textColor="@color/black"
            android:textSize="@dimen/howsServiceTextSize"
            app:layout_constraintEnd_toEndOf="@+id/costEditText"
            app:layout_constraintStart_toStartOf="@+id/costEditText"
            app:layout_constraintTop_toBottomOf="@+id/costEditText"/>
    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/howsServiceTextView"
            app:layout_constraintStart_toStartOf="@+id/howsServiceTextView"
            app:layout_constraintEnd_toEndOf="@+id/costEditText" app:layout_constraintHorizontal_bias="0.0">
        <RadioButton
                android:id="@+id/amazingRadioButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/amazing_20"
                android:checked="true"
                android:textSize="@dimen/radioOptionTextSize"
                android:textColor="@color/black"
        />
        <RadioButton
                android:id="@+id/goodRadioButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/good_18"
                android:textSize="@dimen/radioOptionTextSize"
                android:textColor="@color/black"
        />
        <RadioButton
                android:id="@+id/okayRadioButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/okay_15"
                android:textSize="@dimen/radioOptionTextSize"
                android:textColor="@color/black"
        />
    </RadioGroup>
    <Switch
            android:id="@+id/roundUpSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/round_up_tip"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
    <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/roundUpSwitch"
            app:layout_constraintEnd_toEndOf="@+id/roundUpSwitch"
            app:layout_constraintTop_toBottomOf="@+id/roundUpSwitch"/>
    <TextView
            android:id="@+id/calculatedTipAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_amount"
            android:textColor="@color/black"
            android:textSize="@dimen/calculatedTipAmountTextSize"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>